[package]
name = "defi_wallet"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A production-level P2P application for building and integrating crypto wallets for DeFi and blockchain applications"

[dependencies]
# Core dependencies
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Cryptography and security
ed25519-dalek = "1.0"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base58 = "0.2"

# Blockchain and Web3
web3 = "0.19"
ethers = { version = "2.0", features = ["ws", "rustls"] }
solana-sdk = "1.16"

# P2P networking
libp2p = { version = "0.52", features = ["tokio", "tcp", "dns", "websocket", "noise", "mplex", "yamux"] }
multiaddr = "0.16"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }

# Configuration
config = "0.13"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
test-log = "0.2"
